--- a/style.css
+++ b/style.css
@@ -176,3 +176,28 @@
     margin: auto;
     margin-top: 50px;
 }
+.ire{
+    width: 100%;
+    height: 400px;
+    background: #222;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+.fr{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    list-style: none;
+    color: #fff;
+
+}
+.ire h2{
+    text-align: center;
+    margin-bottom: 100px;
+    
+}
+.fr ul{
+    list-style: none;
+}
